refactor(docker files): code refactor

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,17 +1,17 @@
-version: '3.0'
+version: "3.9"
 
 services:
-    monitorapa:
-        container_name: monitorapa
-        image: monitorapa
-        build:
-            context: .
-            dockerfile: ./Dockerfile
+  monitorapa:
+    container_name: monitorapa
+    image: monitorapa
+    build:
+      context: .
+      dockerfile: ./Dockerfile
 
-        volumes:
-            - ../:/usr/src/app/monitorapa
-            #- ./cli:/usr/src/app/monitorapa/cli
-            #- ./check:/usr/src/app/monitorapa/check
-        restart: unless-stopped
-        stdin_open: true
-        tty: true
+    volumes:
+      - ../:/usr/src/app/monitorapa
+      #- ./cli:/usr/src/app/monitorapa/cli
+      #- ./check:/usr/src/app/monitorapa/check
+    restart: unless-stopped
+    stdin_open: true
+    tty: true
